--- a/exam/package.json
+++ b/exam/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://anniekhrush.github.io/2022-2-VK-EDU-FS-Frontend-A-Khrushkova/exam",
   "name": "exam",
   "version": "0.1.0",
   "private": true,
