--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,7 +10,7 @@ jobs:
       with:
         node-version: 16
     - name: Install npm deps
-      working-directory: ./react-chat
+      working-directory: ./exam
       run: npm i
     - name: Build app
       working-directory: ./exam
